[package]
name = "kips_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
usb-gadget = { git = "https://github.com/surban/usb-gadget", branch = "master" }
sdl2 = { version = "0.35", features = ["ttf", "image"] }
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
