[package]
name = "kips_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.29.0"
rusb = "0.9"
sdl2 = { version = "0.35", features = ["ttf", "image"] }
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
evdev = "0.12"
rppal = "0.14"
reqwest = {version = "0.11", features = ["json"]}
tokio = {version = "1", features = ["full"]}
cpal = "0.15"
rfd = "0.10" 
hound="3.5"